tests/paczka1/small_fuzzy/86919038.err
Error in line 2: wGnwlRSAQ S619 88,5
Error in line 1: dhi2v5Y3K S614 40,4
